...
          Positioned(
            right: 20,
            bottom: 180,
            child: FloatingActionButton(
              heroTag: "ar_mode_nav",
              backgroundColor: Colors.black,
              tooltip: "Cámara AR",
              onPressed: () async {
                try {
                  final cams = await availableCameras();
                  if (cams.isEmpty) {
                    if (mounted) {
                      ScaffoldMessenger.of(context).showSnackBar(
...
